# myedgex

boot/: docker-compose.yml
config/scheduler/: configuration.toml
config/support-notification/: configuration.toml
deviceservice/: CMakeLists.txt  main  random.c
deviceservice/boot/: boot.py  build.py  clean.py
deviceservice/res/: configuration.toml  random-generator-device.yaml
dockerfiles/notification/: dockerfile
dockerfiles/scheduler/: dockerfile
res/: configuration.toml  profile.yaml
support/: deleteMyInterval.py  deleteProcessedNotification.py  sendEmail.py  submitAction.py  submitInterval.py  submitNotification.py  submitSubcription.py
support/interval/: emailinterval.json
support/intervalAction/: emailAction.json
support/notification/: email.json
support/subscription/: email.json
